force-app/main/default/objects/CampaignMember/fields/FreeRegistrationCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>FreeRegistrationCompletionDate__c</fullName>
    <label>無料登録完了日</label>
    <type>Date</type>
</CustomField>