force-app/main/default/objects/CampaignMember/fields/FreeRegistrationReplyDate__c.field-meta.xml
<CustomField>
    <fullName>FreeRegistrationReplyDate__c</fullName>
    <label>無料登録用紙返信日</label>
    <type>Date</type>
</CustomField>