force-app/main/default/objects/CampaignMember/fields/FreeRegistrationSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>FreeRegistrationSubmissionDate__c</fullName>
    <label>無料登録用紙送付日</label>
    <type>Date</type>
</CustomField>