force-app/main/default/objects/CampaignMember/fields/IsRecycleLead__c.field-meta.xml
<CustomField>
    <fullName>IsRecycleLead__c</fullName>
    <formula>AND( 
  CreatedDate &gt;= Lead.SupportedEndChangeDateTime__c,
  OR( 
    AND(
      ISPICKVAL(Campaign.Category__c,&quot;比較&quot;),
      DATEVALUE(CreatedDate) - DATEVALUE(Lead.SupportedEndChangeDateTime__c) &gt;= 6
    ),
    AND(
      ISPICKVAL(Campaign.Category__c,&quot;興味&quot;) || ISPICKVAL(Campaign.Category__c,&quot;認知&quot;),
      DATEVALUE(CreatedDate) - DATEVALUE(Lead.SupportedEndChangeDateTime__c) &gt;= 90
    )
  )
)</formula>
    <label>リードのリサイクル対象</label>
    <type>Checkbox</type>
</CustomField>