force-app/main/default/objects/CampaignMember/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <formula>Contact.Title +  Lead.Title</formula>
    <label>役職</label>
    <type>Text</type>
</CustomField>