force-app/main/default/objects/CampaignMember/fields/MemberStatusDetail__c.field-meta.xml
<CustomField>
    <fullName>MemberStatusDetail__c</fullName>
    <label>メンバーの状況（詳細）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>利用申込</fullName>
            </value>
            <value>
                <fullName>問い合わせ</fullName>
            </value>
            <value>
                <fullName>サービス資料請求</fullName>
            </value>
            <value>
                <fullName>コンテンツ資料請求</fullName>
            </value>
            <value>
                <fullName>資料DL</fullName>
            </value>
            <value>
                <fullName>LP閲覧</fullName>
            </value>
            <value>
                <fullName>サービス興味あり</fullName>
            </value>
            <value>
                <fullName>参加</fullName>
            </value>
            <value>
                <fullName>申込</fullName>
            </value>
            <value>
                <fullName>動画視聴申込</fullName>
            </value>
            <value>
                <fullName>サービスLP</fullName>
            </value>
            <value>
                <fullName>クリック</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>