force-app/main/default/objects/CampaignMember/fields/MonthlyValveComManagementNumber__c.field-meta.xml
<CustomField>
    <fullName>MonthlyValveComManagementNumber__c</fullName>
    <label>月刊弁コム管理番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>