force-app/main/default/objects/CampaignMember/fields/OccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceDate__c</fullName>
    <label>発生日</label>
    <type>Date</type>
</CustomField>