force-app/main/default/objects/CampaignMember/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>Contact.Account.OfficeName__c</formula>
    <label>事務所</label>
    <type>Text</type>
</CustomField>