force-app/main/default/objects/CampaignMember/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <formula>Contact.Account.RegistrationNumber__c</formula>
    <label>【削除予定】登録番号</label>
    <type>Text</type>
</CustomField>