force-app/main/default/objects/CampaignMember/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>レスポンス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無料登録</fullName>
            </value>
            <value>
                <fullName>無料登録（web）</fullName>
            </value>
            <value>
                <fullName>既に無料登録</fullName>
            </value>
            <value>
                <fullName>既に有料登録</fullName>
            </value>
            <value>
                <fullName>セミナー参加</fullName>
            </value>
            <value>
                <fullName>セミナー参加（別日程）</fullName>
            </value>
            <value>
                <fullName>セミナー参加（現金）</fullName>
            </value>
            <value>
                <fullName>セミナー参加（クレカ）</fullName>
            </value>
            <value>
                <fullName>資料送付</fullName>
            </value>
            <value>
                <fullName>セミナー欠席</fullName>
            </value>
            <value>
                <fullName>掲載承諾</fullName>
            </value>
            <value>
                <fullName>掲載拒否</fullName>
            </value>
            <value>
                <fullName>営業連絡</fullName>
            </value>
            <value>
                <fullName>アンケート回答</fullName>
            </value>
            <value>
                <fullName>未達</fullName>
            </value>
            <value>
                <fullName>1_受注</fullName>
            </value>
            <value>
                <fullName>2_A</fullName>
            </value>
            <value>
                <fullName>3_B</fullName>
            </value>
            <value>
                <fullName>4_C</fullName>
            </value>
            <value>
                <fullName>5_ネタ</fullName>
            </value>
            <value>
                <fullName>6_未</fullName>
            </value>
            <value>
                <fullName>7_失注</fullName>
            </value>
            <value>
                <fullName>8_定期追い</fullName>
            </value>
            <value>
                <fullName>9_アポ予定</fullName>
            </value>
            <value>
                <fullName>10_アポ打診中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>