force-app/main/default/objects/CampaignMember/fields/SeminarAttendingSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SeminarAttendingSubmissionDate__c</fullName>
    <label>セミナー受講票送付日</label>
    <type>Date</type>
</CustomField>