force-app/main/default/objects/CampaignMember/fields/SeminarDocumentSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SeminarDocumentSubmissionDate__c</fullName>
    <label>セミナー資料送付日</label>
    <type>Date</type>
</CustomField>