force-app/main/default/objects/CampaignMember/fields/StatusUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>StatusUpdateDate__c</fullName>
    <label>状況更新日</label>
    <type>DateTime</type>
</CustomField>